--- a/projects-django/project1/.env
+++ b/projects-django/project1/.env
@@ -1,2 +1,2 @@
 # SECURITY WARNING: keep the secret key used in production secret!
-SECRET_KEY = 'django-insecure-&=_)prca3*llv=$5dw9#e86((n8$v+o5e)skvv0t_^dqk&!0n)'
+SECRET_KEY = django-insecure-&=_)prca3*llv=$5dw9#e86((n8$v+o5e)skvv0t_^dqk&!0n)
